Add saving data feature

--- a/app/src/main/resources/data/settings.properties
+++ b/app/src/main/resources/data/settings.properties
@@ -1,3 +1,9 @@
-player1_name=Player1
-player2_name=Player2
-
+#Last save:Set players's name
+#Mon Mar 18 18:48:10 GMT 2024
+ballSpeed=fast
+ballSpeedIR=fast
+endGameScore=5
+player1=Mike
+player2=Patrick
+racketHeight=120.0
+racketWidth=15.2
